--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
+    "postinstall": "npx prisma generate --schema=src/models/prisma/schema.prisma",
     "start": "node dist/index.js"
   },
   "keywords": [],
